--- a/package.json
+++ b/package.json
@@ -19,17 +19,28 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "bootstrap": "^4.5.2",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^10.1.7",
+    "jszip": "^3.5.0",
+    "minireset.css": "~0.0.4",
+    "ngx-spinner": "^10.0.1",
+    "ngx-toastr": "^13.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.4",
     "@angular/cli": "~10.1.4",
     "@angular/compiler-cli": "~10.1.4",
-    "@types/node": "^12.11.1",
+    "@igniteui/angular-schematics": "~10.1.610",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
